# stereo_camera

./: .gitignore  Cargo.toml  init_shell.sh  pyproject.toml  rustfmt.toml  stereo.py
crates/stereo/: Cargo.toml
crates/stereo/src/: main.rs  stereo_camera.rs
